@@ -1,0 +1,7 @@
+===========================================================================
+$NetBSD: MESSAGE,v 1.3 2005/10/08 16:50:23 jdolecek Exp $
+
+Note php-openssl has been removed as separate package as of 5.0.5nb1, the
+main PHP5 package has them built-in now.
+===========================================================================
+
